<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sportNewsAPI.view.fragments.HomeFragment"
        android:label="@string/menu_home"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="myArg"
            app:argType="string"/>
<!--
        <action
            android:id="@+id/action_homeFragment_to_firstFragment"
            app:destination="@id/nav_newsDetailActivity" />-->

    </fragment>


    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.sportNewsAPI.view.fragments.CategoryFragment"
        android:label="Category"
        tools:layout="@layout/fragment_category" >
       <!-- <action
            android:id="@+id/action_homeFragment_toLinkListActivity"
            app:destination="@id/nav_list_activity" />-->
    </fragment>


    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="com.example.sportNewsAPI.view.fragments.BookmarksFragment"
        android:label="Bookmarks"
        tools:layout="@layout/fragment_bookmarks" >
        <!-- <action
             android:id="@+id/action_homeFragment_toLinkListActivity"
             app:destination="@id/nav_list_activity" />-->
    </fragment>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.sportNewsAPI.view.fragments.FeedbackFragment"
        android:label="Feedback"
        tools:layout="@layout/fragment_feedback" >
        <!-- <action
             android:id="@+id/action_homeFragment_toLinkListActivity"
             app:destination="@id/nav_list_activity" />-->
    </fragment>
</navigation>