<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.example.sportNewsAPI.viewModel.FeedbackViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/relative_feedback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:hint="@string/subject"
                    android:inputType="textMultiLine|textCapSentences"
                    android:text="@={model.form.fields.subject}"
                    app:error="@{model.form.subjectError}"
                    app:onFocus="@{model.getSubjectOnFocusChangeListener()}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/msg_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/message"
                    android:inputType="textMultiLine|textCapSentences"
                    android:text="@={model.form.fields.msg}"
                    app:error="@{model.form.msgError}"
                    app:onFocus="@{model.getMsgOnFocusChangeListener()}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:enabled="@{model.form.valid}"
                android:onClick="@{() -> model.onButtonClick()}"
                android:src="@drawable/ic_send"
                app:elevation="6dp"
                app:fabSize="normal"
                app:pressedTranslationZ="12dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>

    </RelativeLayout>
</layout>