...
                    android:id="@+id/linear1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/topHeadlines"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="16dp"
                        android:fontFamily="sans-serif-light"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_article"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animationCache="false"
                        android:clipToPadding="false"
                        android:scrollbars="vertical"
                        android:scrollingCache="false" />
...
